--- a/style.css
+++ b/style.css
@@ -5,3 +5,25 @@ html, body {
 canvas {
   display: block;
 }
+
+.button {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  z-index: 100;
+  background: #fff;
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #000;
+  cursor: pointer;
+}
+
+.button:hover {
+  transition: all 0.2s ease-in-out;
+  background: #000;
+  color: #fff;
+}
+
+.button:active {
+  transform: scale(0.9);
+} 
